--- a/index.html
+++ b/index.html
@@ -3,3 +3,16 @@
   <meta charset="utf-8">
   <title>GitHub</title>
 </head>
+<!-- 網頁內容都在這-->
+<body>
+  <h1 class="title_txt">WWW記得打標簽+tab鍵速度才會快</h1>
+  
+  <img src="https://3.bp.blogspot.com/-mg6rBNoXxw4/VxnRTkMKjPI/AAAAAAAANrM/FXmZsRWev7AIpV60zCVJVtD_jhjDoU4OQCLcB/s640/DSC00806_%25E5%2589%25AF%25E6%259C%25AC.jpg">
+  <form >
+    請輸入數字：<input type="text" id="putin">
+    <button onclick="calculate();">ok</button>
+    <br>
+    <textarea name="read" cols="5" rows="3" disabled id="valueInput">value</textarea>
+  </form>
+  
+</body>
