--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
   <meta charset="utf-8">
   <title>GitHub</title>
+  <link rel="stylesheet" type="text/css" href="css.css">
+  <script type="text/javascript " src="js.js"></script>
 </head>
 <!-- 網頁內容都在這-->
 <body>
